tests/specs/run/maybe_cjs_source_map/main.out
error: Uncaught (in promise) Error: source map from cjs
  throw new Error("source map from cjs");
        ^
    at fail ([WILDCARD]/mod.cts:2:9)
    at Object.run ([WILDCARD]/mod.cts:6:3)
    at [WILDCARD]/main.ts:3:5
